# xmonadDotfiles

./: .gitignore
xmobar/: CHANGELOG.md  XMobar-Tort.cabal  build  xmobarrc
xmobar/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
xmobar/src-exe/: Main.hs
xmonad/: CHANGELOG.md  XMonad  XMonad.cabal  build  xmonad-x86_64  xmonad-x86_64-linux-old  xmonad.hs
xmonad/build-x86_64-linux/: Main.hi
xmonad/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
