cabal-version:      2.4
name:               XMobar-Tort
version:            0.1.0.0
synopsis:           a quick xmobar configuration for me

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Tortus-exe
maintainer:         65506144+Tortus-exe@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable XMobar-Tort
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0 
                    , xmobar ^>=0.45
                    , xmonad-contrib ^>=0.17.1
                    , X11-xft
    hs-source-dirs:   src-exe
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts
